# lbp

./: .Makefile.swp  .README.swp  .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile_windows  README  README.md  detect  detectMultiScale.cpp  detect_webcam.cpp  feature.txt  lbpFeature.cpp  lbpFeatureSvm.cpp  lbpFeatureSvm.h  lbp_svm  lbp_svm.cbp  lbp_svm.cpp  pcaDimReduce.cpp  train.cpp  ycbcr.cpp
src/: CMakeLists.txt  dataset.cc  dataset.h  detect.cc  detect.h  detectMultiScale.cpp  detect_face.cpp  feature.h  lbp.h  lbpFeature.cpp  lbpFeature.h  lbpFeatureSvm.cpp  lbpFeatureSvm.h  lbp_svm.cpp  multiImg.cpp  multiImg.h  pcaDimReduce.cpp  pcaDimReduce.h  util.h  ycbcr.cpp  ycbcr.h
src_o/: detect.cpp  detectSingleScale.cpp  detect_webcam.cpp  findBest.cpp  test.cpp  train.cpp
test/: CMakeLists.txt  detect_two_part.cc  test_dataset.cc  test_lbp.cc  test_train.cc  test_train_two_part.cc  test_two_part_hist_v.cc
tools/: Makefile
tools/sampleCut/: multiImg.h  sampleCut.cpp
tools/sampleList/: sampleList.cpp
tools/src/: multiImg.cpp  multiImg.h  sampleCut.cpp  sampleList.cpp
trained/: train.xml  train1.xml  train16.xml  train2.xml  train3P0N3.xml  train3P0N4.xml  train3P0N5.xml  train3P1N3.xml  train3_100.xml  train4.xml  train5.xml  trainN2.xml  trainN3.xml  trainTP0N5.xml  trainTP1N5.xml  trainTP2N5.xml  trainTP2N6.xml  trainTP2N7.xml  trainTP2N7_PCA.xml  trainTP2N7_matrix.txt
